--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+!target/k8s-spring-boot-demo-0.0.1-SNAPSHOT.jar
 
 ### STS ###
 .apt_generated
