--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '2'
+version: '3'
 services:
   k8s-springboot-demo:
     image: yangqiuhua/k8s-springboot-demo
     ports:
       - "8080:8080"
     environment:
-      - spring.profiles.active=dev
+      - server.port=8080
