--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   k8s-springboot-demo:
     image: yangqiuhua/k8s-springboot-demo
     ports:
-      - "8080:8080"
+      - "8070:8090"
     environment:
-      - server.port=8080
+      - server.port=8090
+      - logging.level.root=DEBUG
