--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,4 @@ services:
       - logging.level.root=DEBUG
       - logging.file.name=/data/k8s-springboot-demo/logs/k8s-springboot-demo.log
 #    volumes:
-#    - /data/k8s-springboot-demo:/data/k8s-springboot-demo:z
+#      - "/data/k8s-springboot-demo:/data/k8s-springboot-demo"
