--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,6 @@ services:
     environment:
       - server.port=8090
       - logging.level.root=DEBUG
-      - logging.file.name=/data/k8s-springboot-demo/logs/k8s-springboot-demo.log
+      - logging.file.name=/data/logs/k8s-springboot-demo/k8s-springboot-demo.log
 #    volumes:
-#      - "/data/k8s-springboot-demo:/data/k8s-springboot-demo"
+#      - "/data:/data"
